dynamic title & readme done

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="react.svg" />
+  <link rel="shortcut icon" href="clothing_donation.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React</title>
+  <title>Clothing Donation</title>
 </head>
 
 <body>
